2002-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* contrib/gpg-ring.el: Remove RCS magic cookie.
	* lisp/nnir.el: Ditto.

	* texi/ptexinfmt.el (texinfo-discard-command-and-arg): New
	function.

2002-06-03  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* texi/ptexinfmt.el: discard @cartouche.  @anchor discard for Mule
	2.3.  Support @., @:, @-.
	(texinfo-format-inforef): New function.

2002-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnheader.el (nnheader-unfold-fws): New function copied from
	`ietf-drums-unfold-fws'.
	(ietf-drums-unfold-fws): Alias to `nnheader-unfold-fws'.

2002-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.7 revision 00.

2002-04-30  Daiki Ueno  <ueno@unixuser.org>

	* lisp/message.el (message-expand-name-function): New user option.
	(message-expand-name): Use it.
	* lisp/lpath.el: Don't bind lsdb-complete-name and bbdb-complete-name.

2002-04-30  Daiki Ueno  <ueno@unixuser.org>

	* lisp/message.el (message-expand-name): Use lsdb-complete-name if
	available.
	* lisp/lpath.el: Bind lsdb-complete-name.

2002-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-bind-colon-keywords): Also examine
	backquote'd forms.

	* lisp/nnheader.el (nnheader-with-unibyte): New macro.
	(mm-with-unibyte): Alias to `nnheader-with-unibyte'.

2002-04-26  Steve Youngs  <youngs@xemacs.org>

	* aclocal.m4 (AC_PATH_INFODIR): New.  Defaults to '$prefix/info'
	for Emacs and 'site-packages/info' for XEmacs.
	(AC_PATH_ETCDIR): Drop 'gnus' off the end of the default directory
	for XEmacs.

	* configure.in: Use 'AC_PATH_INFO_DIR'.

2002-04-23  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Disregard the
	message cache when bbdb/news-auto-create-p is nil.

2002-04-23  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Work around the
	incompatibility with BBDB 2.3x.
